--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ pageviews:
 theme_mode: light
 cdn:
 avatar: /assets/img/logos/spearlink-main.png
-social_preview_image: /assets/img/logos/spearlink-horizontal.png
+social_preview_image: /assets/img/logos/sp.png
 toc: false
 
 comments:
